2009-06-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#120571 ROTATION: Call idle view is not completely Displayed
		  in certain scenario
	NB#120066 ROTATION: Cannot go back to home view after closing
		  phone application

	When the layout manager requests new geometry in portrait mode
	do not touch clients which don't support it, but reconfigure
	all other.  This way we don't resize clients that needn't be
	but resize the ones that need to be.

	* src/mb/hd-comp-mgr.h (hd_comp_mgr_is_portrait):
	  New utility function.  Oh, sorry, typesafe macro.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_supports_portrait):
	  New utility function.
	* src/util/hd-transition.c:
	  Replace get_current_screen_width/height() with is_portrait().
	* src/mb/hd-app.c (hd_app_request_geometry):
	  Ignore the layout manager's request if we're in portrait
	  but the client doesn't support it.  When we leave portrait
	  it will be reconfigured properly anyway.

2009-06-05  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Clip titlebar's text when showing the progress indicator.
	Fixes: NB#120342

	* src/home/hd-switcher.c:
	* src/home/hd-title-bar.c:
	* src/home/hd-title-bar.h: Set the text and progress indicator in the
	same call, so we can calculate the correct clipping.
	* src/launcher/hd-launcher.c:

2009-06-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-home-view.c (hd_home_view_applet_release): Prepare for
	NULL return value from hd_home_view_container_get_next/previous_view.
	Fixes: NB#120248 - observed a hildon-desktop crash. Also, cut some
	overlong lines...

	Fix inline functions to actually be inlined.

	* src/main.c (hd_mb_wm): Global MBWindowManager pointer for the
	inlined functions.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_init): Initialise hd_mb_wm here.
	(hd_comp_mgr_get_current_screen_width,
	hd_comp_mgr_get_current_screen_height,
	hd_comp_mgr_client_is_maximized): Moved to hd-comp-mgr.h.