@@ -5,6 +5,10 @@ hildon-desktop (1:2.2.52-1~unreleased) unstable; urgency=low
     theme-config
   * Fixes: NB#120248 - observed a hildon-desktop crash.
 
+  Laszlo:
+  * Fixes: NB#119709 - Device freezes if camera lens cover is opened while in
+    change background image dialog.
+
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon,  1 Jun 2009 08:55:08 +0300
 
 hildon-desktop (1:2.2.51-1) unstable; urgency=low
